--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "activityBar.background": "#203307",
     "titleBar.activeBackground": "#2C480A",
     "titleBar.activeForeground": "#F5FCEB"
-  }
+  },
+  "editor.formatOnSave": true,
 }
