[main] Refactor code style for consistency: unify string quotes and add missing newline in settings.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,4 +5,6 @@
     "titleBar.activeForeground": "#F5FCEB"
   },
   "editor.formatOnSave": true,
+  "cSpell.words": ["Graphiql", "superadmin", "Vendure"],
+  "prettier.singleQuote": true
 }
