--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@vendure/cli": "3.3.4",
+    "@vendure/create": "^3.3.4",
     "concurrently": "9.1.2",
     "typescript": "5.8.2"
   }
