--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsc",
     "start:server": "node ./dist/index.js",
     "start:worker": "node ./dist/index-worker.js",
-    "start": "concurrently npm:start:*"
+    "start": "concurrently npm:start:*",
+    "seed": "node ./src/populate/seed.js"
   },
   "dependencies": {
     "@vendure/admin-ui-plugin": "3.3.4",
