--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,10 @@
 {
-  "workbench.colorCustomizations": {
-    "activityBar.background": "#203307",
-    "titleBar.activeBackground": "#2C480A",
-    "titleBar.activeForeground": "#F5FCEB"
-  },
   "editor.formatOnSave": true,
   "cSpell.words": ["Graphiql", "superadmin", "Vendure"],
-  "prettier.singleQuote": true
+  "prettier.singleQuote": true,
+  "workbench.colorCustomizations": {
+    "activityBar.background": "#053142",
+    "titleBar.activeBackground": "#06455D",
+    "titleBar.activeForeground": "#F5FCFE"
+  }
 }
