--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@vendure/graphiql-plugin": "3.3.7",
     "crypto": "^1.0.1",
     "dotenv": "17.2.1",
-    "pg": "8.16.3"
+    "pg": "8.16.3",
+    "resend": "^6.0.2"
   },
   "devDependencies": {
     "@vendure/cli": "3.3.7",
