--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "seed:dev": "ts-node ./src/populate/seed.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "3.908.0",
+    "@aws-sdk/lib-storage": "3.908.0",
     "@vendure/admin-ui-plugin": "3.4.4",
     "@vendure/asset-server-plugin": "3.4.4",
     "@vendure/core": "3.4.4",
