--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@vendure/graphiql-plugin": "3.4.4",
     "crypto": "^1.0.1",
     "dotenv": "17.2.1",
+    "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.2.0",
     "pg": "8.16.3",
     "resend": "^6.0.2"
   },
