--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "3.908.0",
     "@aws-sdk/lib-storage": "3.908.0",
+    "@pinelab/vendure-plugin-coinbase": "^1.4.0",
     "@vendure/admin-ui-plugin": "3.4.4",
     "@vendure/asset-server-plugin": "3.4.4",
     "@vendure/core": "3.4.4",
@@ -25,6 +26,7 @@
     "@vendure/graphiql-plugin": "3.4.4",
     "crypto": "^1.0.1",
     "dotenv": "17.2.1",
+    "pdfkit": "^0.17.2",
     "pg": "8.16.3",
     "resend": "^6.0.2"
   },
