--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@vendure/cli": "3.3.7",
+    "@vendure/cli": "^3.5.0",
     "concurrently": "9.2.0",
     "typescript": "5.8.3"
   }
