--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "17.2.1",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.2.0",
+    "mercadopago": "^2.10.0",
     "pg": "8.16.3",
     "resend": "^6.0.2"
   },
