Ft: Clickup task ID: 86ad1evqd, Update Admin UI Dashboard from Angular to React

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,15 @@
     "src/plugins/**/ui/*",
     "src/plugins/**/dashboard/*",
     "admin-ui",
-    "vite.*.*ts"
+    "vite.*.*ts",
+    "src/gql/*",
   ],
   "ts-node": {
     "files": true
-  }
+  },
+  "references": [
+    {
+      "path": "./tsconfig.dashboard.json"
+    }
+  ]
 }
