--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vendure/asset-server-plugin": "3.5.0",
     "@vendure/core": "3.5.0",
     "@vendure/create": "3.5.0",
+    "@vendure/dashboard": "3.5.1",
     "@vendure/email-plugin": "3.5.0",
     "@vendure/graphiql-plugin": "3.5.0",
     "axios": "^1.12.2",
@@ -36,5 +37,9 @@
     "@vendure/cli": "3.3.7",
     "concurrently": "9.2.0",
     "typescript": "5.8.3"
+  },
+  "overrides": {
+    "@swc/core": "1.13.5",
+    "@lingui/swc-plugin": "5.6.1"
   }
 }
