Ft: Add Scripts for building

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev:server": "ts-node ./src/index.ts",
     "dev:worker": "ts-node ./src/index-worker.ts",
     "dev": "concurrently npm:dev:*",
-    "build": "tsc",
+    "build:server": "tsc",
+    "build:dashboard": "vite build",
+    "build": "yarn run build:server && yarn run build:dashboard",
     "build:seed": "tsc && cp -R ./static ./dist/static",
     "start:server": "node ./dist/index.js",
     "start:worker": "node ./dist/index-worker.js",
