--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "3.908.0",
     "@aws-sdk/lib-storage": "3.908.0",
+    "@clerk/backend": "^2.29.3",
     "@vendure/admin-ui-plugin": "3.5.0",
     "@vendure/asset-server-plugin": "3.5.0",
     "@vendure/core": "3.5.0",
