Ft: Add Login custom plugin

--- a/tsconfig.dashboard.json
+++ b/tsconfig.dashboard.json
@@ -22,6 +22,8 @@
     },
     "include": [
         "src/plugins/**/dashboard/*",
-        "src/gql/**/*.ts"
+        "src/gql/**/*.ts",
+        "src/vite-env.d.ts",
+        "src /**/*.tsx",
     ]
 }
