--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@aws-sdk/client-s3": "3.908.0",
     "@aws-sdk/lib-storage": "3.908.0",
     "@clerk/backend": "^2.29.3",
+    "@clerk/clerk-react": "^5.59.5",
     "@vendure/admin-ui-plugin": "3.5.0",
     "@vendure/asset-server-plugin": "3.5.0",
     "@vendure/core": "3.5.0",
@@ -37,7 +38,9 @@
     "resend": "^6.0.2"
   },
   "devDependencies": {
+    "@types/react": "19.2.9",
     "@vendure/cli": "3.3.7",
+    "@vendure/ui-devkit": "3.5.0",
     "concurrently": "9.2.0",
     "typescript": "5.8.3"
   },
